# mpm-experiments

./: .gitignore  README.md  brush.py  main.py  pyproject.toml  quad.py  setup.py
mpm/: __init__.py  cffi_gen.py
shaders/: base.fsh  final.fsh  particles.fsh  particles.vsh
src_c/: matrix.h  mpm.c  mpm.h  profiler.h  vector.h
